syntax = "proto3";

option java_package = "br.com.content4devs";
option java_multiple_files = true;

package arquitetura.spring.hexagonal;

service FuncionarioService {
  rpc Create(FuncionarioRequest) returns (FuncionarioResponse);
  rpc buscarPorId(buscarPorIdRequest) returns (FuncionarioResponse);
  rpc buscarTodos(EmptyRequest) returns (FuncionarioResponseList);
  rpc buscarPorCep(buscarPorCepRequest) returns (FuncionarioResponseList);
}

enum Sexo {
  MASCULINO = 0;
  FEMININO = 1;
}

message EmptyRequest {}

message FuncionarioResponseList {
  repeated FuncionarioResponse funcionarios = 1;
}

message FuncionarioRequest {
  string nome = 1;
  int32 idade = 2;
  Sexo sexo = 3;
  string bairro = 4;
  string estado = 5;
  string cidade = 6;
  string cep = 7;
}

message buscarPorIdRequest {
  int64 id = 1;
}

message buscarPorCepRequest {
  string cep = 1;
}

message FuncionarioResponse {
  string nome = 1;
  int32 idade = 2;
  Sexo sexo = 3;
  string bairro = 4;
  string estado = 5;
  string cidade = 6;
  string cep = 7;
}